...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Library" id="Wpf-7x-b36"/>
                    <connections>
                        <outlet property="activityIndicator" destination="jkX-OL-0d1" id="24e-93-qiz"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ql6-uq-WFV">
                                <rect key="frame" x="16" y="20" width="343" height="75"/>
                                <accessibility key="accessibilityConfiguration" identifier="abilityNameLabel"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="75" id="fF9-cV-5i1"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j0w-y5-bdj">
                                                        <rect key="frame" x="164.33333333333334" y="0.0" width="47.666666666666657" height="100"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="racesNameLabel"/>
                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                        <nil key="textColor"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xJt-5J-7fU">
                                                        <rect key="frame" x="164.66666666666666" y="0.0" width="47" height="150.66666666666666"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="spellNameLabel"/>
                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                        <nil key="textColor"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Druid" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pi8-Ne-9Jh">
                                        <rect key="frame" x="151.33333333333334" y="0.0" width="56.333333333333343" height="125"/>
                                        <accessibility key="accessibilityConfiguration" identifier="classNameLabel"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                        <nil key="textColor"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DnP-dX-jXI">
                                        <rect key="frame" x="149" y="52.666666666666657" width="45" height="53.333333333333343"/>
                                        <accessibility key="accessibilityConfiguration" identifier="equipNameLabel"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ndv-Sq-48K">
                                                        <rect key="frame" x="164.66666666666666" y="0.0" width="47.666666666666657" height="152"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="monsterNameLabel"/>
                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                        <nil key="textColor"/>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CHA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8WZ-60-wav">
                                                        <rect key="frame" x="171" y="2002" width="35" height="152"/>
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                        <rect key="frame" x="0.0" y="349" width="375" height="341"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                        <state key="normal" title="Dice" backgroundImage="d20-dice-roller-tabletop-games-29958">
                                            <color key="titleColor" systemColor="systemGray6Color"/>
                                            <color key="titleShadowColor" systemColor="darkTextColor"/>
...
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                        <state key="normal" title="D4">
                                            <color key="titleColor" systemColor="systemGray6Color"/>
                                            <color key="titleShadowColor" systemColor="darkTextColor"/>
...
                                        <rect key="frame" x="0.0" y="98.666666666666657" width="375" height="98.666666666666657"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                        <state key="normal" title="D6">
                                            <color key="titleColor" systemColor="systemGray6Color"/>
                                            <color key="titleShadowColor" systemColor="darkTextColor"/>
...
                                        <rect key="frame" x="0.0" y="197.33333333333331" width="375" height="98.666666666666686"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                        <state key="normal" title="D8">
                                            <color key="titleColor" systemColor="systemGray6Color"/>
